[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/game_element/enemy/spreader_enemy/spreader_enemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/game_element/enemy/spreader_enemy/spreader_enemy_visuals/spreader_enemy_animations.tres" type="SpriteFrames" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="SpreaderEnemy" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "Shoot-Left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_SpreaderEnemy_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
